--- a/Section01/my-first-app/src/app/server/server.component.html
+++ b/Section01/my-first-app/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server with ID {{ serverID }} is {{ getServerStatus() }}</p>
+<p>{{ 'Server' }} with ID {{ serverID }} is {{ getServerStatus() }}</p>
