--- a/Section01/my-first-app/src/app/servers/servers.component.html
+++ b/Section01/my-first-app/src/app/servers/servers.component.html
@@ -1,5 +1,11 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<label>Server Name</label>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)">
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">
+  Add Server
+</button>
+<p>{{ serverName }}</p>
 <p>{{ allowNewServer }}</p>
 <p [innerText]="allowNewServer"></p>
+<p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
